--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,24 @@ yarn-error.log*
 # Backups
 /backups/
 *.sql
+!database/init.sql
 
 # Credentials directory (except documentation)
 /credentials/*.json
 /credentials/*.key
 /credentials/*.pem
+
+# Docker volumes
+n8n_data/
+postgres_data/
+ollama_data/
+
+# OS specific
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
