--- a/.gitignore
+++ b/.gitignore
@@ -5,21 +5,26 @@
 
 # Environment files
 /.env
+/.env.production
+/.env.local
+/.env.*.local
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
-# Backups
-/backups/
-*.sql
-!database/init.sql
+# Production volumes and data
+/volumes/
+/backups/*.sql
+!backups/.gitkeep
 
 # Credentials directory (except documentation)
 /credentials/*.json
 /credentials/*.key
 /credentials/*.pem
+!credentials/CREDENTIALS.md
 
 # Docker volumes
 n8n_data/
@@ -35,3 +40,19 @@ Thumbs.db
 .idea/
 *.swp
 *.swo
+
+# SSL Certificates
+*.crt
+*.key
+*.pem
+*.p12
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
+
+# Production secrets
+secrets/
+.secrets
