--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 # ============================================================
 # CONFIGURACION DE DOCKER COMPOSE PARA PRODUCCION
-# Servidor: https://n8n.alekarpy.uk/
+# Servidor: https://n8n.tudominio.com/
 # ============================================================
 
 services:
@@ -57,11 +57,11 @@ services:
       - DB_POSTGRESDB_SCHEMA=public
       
       # Configuracion de n8n
-      - N8N_HOST=${N8N_HOST:-n8n.alekarpy.uk}
+      - N8N_HOST=${N8N_HOST:-n8n.tudominio.com}
       - N8N_PORT=5678
       - N8N_PROTOCOL=${N8N_PROTOCOL:-https}
-      - WEBHOOK_URL=${WEBHOOK_URL:-https://n8n.alekarpy.uk}
-      - N8N_EDITOR_BASE_URL=${N8N_EDITOR_BASE_URL:-https://n8n.alekarpy.uk}
+      - WEBHOOK_URL=${WEBHOOK_URL:-https://n8n.tudominio.com}
+      - N8N_EDITOR_BASE_URL=${N8N_EDITOR_BASE_URL:-https://n8n.tudominio.com}
       
       # Seguridad
       - N8N_BASIC_AUTH_ACTIVE=true
@@ -95,7 +95,7 @@ services:
       
       # CORS
       - N8N_CORS_ENABLED=true
-      - N8N_CORS_ORIGIN=${N8N_HOST:-https://n8n.alekarpy.uk}
+      - N8N_CORS_ORIGIN=${N8N_HOST:-https://n8n.tudominio.com}
       
       # Claves API (pasadas desde .env.production)
       - OPENAI_API_KEY=${OPENAI_API_KEY}
