Remove author field from package.json
Clears the author field in package.json, possibly to anonymize the project or prepare for a change in project ownership.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/BarryGon911/n8n-MCP-Automatizacion-y-Agentes-de-IA-Inteligentes.git"
   },
   "keywords": [],
-  "author": "BarryGon911",
+  "author": "",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
